fix the annoucement z-index bug.

--- a/source/stylesheets/partials/_layouts.scss
+++ b/source/stylesheets/partials/_layouts.scss
@@ -100,6 +100,7 @@ p {
 .annoucement {
   position: fixed;
   top: 0;
+  z-index: 9999;
   width: 100%;
   padding: 7px 0 5px;
   border-bottom: 1px solid $hairLineColor;
